# god-skill-suite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new_skill_request.md  skill_improvement.md
.github/workflows/: publish_docker.yml  publish_pypi.yml  validate.yml
docs/: TESTING.md  TEST_RESULTS.md  USAGE.md
god_skill_suite/: __init__.py  install.py
installer/: install.ps1  install.py  install.sh
scripts/: convert_gifs.sh  evaluate_skills.py  generate_skill_gifs.py  scaffold_tests_prompts.py  validate_all.py
skills/god-ai-architect/: SKILL.md  tests.json
skills/god-ai-prompting/: SKILL.md  tests.json
skills/god-api-design/: SKILL.md  tests.json
skills/god-architecture-patterns/: SKILL.md  tests.json
skills/god-auth-protocols/: SKILL.md  tests.json
skills/god-backend-mastery/: SKILL.md  tests.json
skills/god-compliance-governance/: SKILL.md  tests.json
skills/god-containers-advanced/: SKILL.md  tests.json
skills/god-cost-engineering/: SKILL.md  tests.json
skills/god-data-cleaning/: SKILL.md  tests.json
skills/god-data-engineering/: SKILL.md  tests.json
skills/god-database-mastery/: SKILL.md  tests.json
skills/god-dev-builder/: SKILL.md  tests.json
skills/god-dev-codebase/: SKILL.md  tests.json
skills/god-dev-core/: SKILL.md  tests.json
skills/god-dev-research/: SKILL.md  tests.json
skills/god-devex-tooling/: SKILL.md  tests.json
skills/god-devops-core/: SKILL.md  tests.json
skills/god-devops-kubernetes/: SKILL.md  tests.json
skills/god-edge-computing/: SKILL.md  tests.json
skills/god-frontend-mastery/: SKILL.md  tests.json
skills/god-git-workflow/: SKILL.md  tests.json
skills/god-iam-aws/: SKILL.md  tests.json
skills/god-iam-azure/: SKILL.md  tests.json
skills/god-iam-gcp/: SKILL.md  tests.json
skills/god-infra-as-code/: SKILL.md  tests.json
skills/god-linux-mastery/: SKILL.md  tests.json
skills/god-llm-sdk/: SKILL.md  tests.json
skills/god-message-streaming/: SKILL.md  tests.json
skills/god-meta-conductor/: SKILL.md  (+1 more)
(+93 files in other folders)
